@@ -1,3 +1,4 @@
 * Add console colour support
 * Fix round the tps
 * Fix factions compatiblity
+* Add amour variables
